kubernetes-config/qa/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: track-a-query-ingress
spec:
  tls:
  - hosts:
    - track-a-query-qa.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: track-a-query-qa.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: track-a-query-service
          servicePort: 3000
